Correction de l'alignement à gauche décalé à cause de la bordure.

--- a/jeuderole/styles/2666/theme/2666.css
+++ b/jeuderole/styles/2666/theme/2666.css
@@ -157,6 +157,7 @@ div.corps,div#postingbox{
 	padding-top : 4px;
 	padding-bottom : 4px;
 	text-align: justify;
+	margin-left:-15px;
 }
 img.img-thumbnail{
 	border-color:#428BCA;
